# rtsp_streamer

./: CMakeLists.txt  README.md  backup  streamer.cpp  test.cpp
cmake/: Conan.cmake  FindGLib.cmake  FindGStreamer.cmake
runner_binary/: rtsp_streamer  run.sh
